v1.15.0/04.项目/04.服务/02.helm_chart_service.md
---
title: K8s Helm Chart 服务
date: 2022-03-17 22:12:20
permalink: /v1.15.0/project/service/helm/chart/
---

本文介绍 K8s Helm Chart 项目中的服务相关操作。[Helm](https://helm.sh/) 是 Kubernetes 应用的包管理工具，使用 Helm Chart 可定义、安装和升级复杂的 Kubernetes 应用。

## 新建服务

支持从代码库同步、从 Chart 仓库同步、使用模板新建三种方式创建 K8s Helm Chart 服务。

- `从代码库同步`：从代码库中同步服务的 Helm Chart 配置，支持 GitHub/GitLab/Gerrit 代码库。
- `从 Chart 仓库同步`：从 Chart 仓库中同步服务的 Helm Chart 配置。
- `使用模板新建`：使用 Zadig 平台中的服务 Helm Chart 模板来创建服务，支持一次创建一个服务，也支持批量创建服务。

### 从代码库同步服务
点击从代码库同步 -> 填写代码库及服务配置在代码库中的目录 -> 点击加载，即可从代码库同步服务。同步成功后，当代码库中对应目录的文件有变更时，会通过 Webhook 的方式自动更新此处的服务配置。

::: tip
1. 需要在系统中集成代码源，可参考：[代码源集成](/v1.15.0/settings/codehost/overview/)
2. 目前支持从 [GitLab](/v1.15.0/settings/codehost/gitlab/)/[GitHub](/v1.15.0/settings/codehost/github/)/[Gerrit](/v1.15.0/settings/codehost/gerrit/)/[Gitee](/v1.15.0/settings/codehost/gitee/) 代码源同步服务
:::

以 [service2](https://github.com/koderover/zadig/tree/main/examples/multi-service-demo/full-charts/service2) 服务为例，服务的 Helm Chart 配置目录结构为：

``` shell
├── zadig/examples/multi-service-demo/full-charts/service2
│   ├── Chart.yaml
│   ├── templates
│   │   ├── _helpers.tpl
│   │   ├── deployment.yaml
│   │   └── service.yaml
│   └── values.yaml
```

从代码库同步该服务：

![从 Git 仓库导入 Helm Chart](../_images/helm_chart_from_git_repo.png)

同步后效果：

![从 Git 仓库导入 Helm Chart 效果](../_images/helm_service_from_repo_effect.png)

### 从 Chart 仓库同步服务
::: tip 前提
需要先集成 Helm Chart 仓库，参考：[集成 Helm Chart 仓库](/v1.15.0/settings/helm/)。
:::

点击从 Chart 仓库同步，选择 Chart 仓库及 Chart，新建即可。
![从 Chart 仓库同步 Helm Chart](../_images/helm_chart_from_chart_repo.png)

### 使用模板新建单个服务
::: tip 前提
需要先在系统模板库里创建 Helm Chart 模板，请参考 [Helm Chart 模板管理](/v1.15.0/template/helm_chart/)
:::

- 点击使用模板新建 -> 填写服务名称并选择模板 -> 按需填写配置后，导入即可。
  - 变量配置可使用模板中的默认值，也可以在新建时重新赋值
  - 开启`自动同步`后，当在模板库中对使用的模板操作`应用到服务`时，该服务配置将自动基于模板内容同步


![从 Git 仓库导入 Helm Chart](../_images/create_helm_chart_service_from_template.png)

- 在`高级设置`中，系统还支持用新的 values.yaml 覆盖模板中的 values.yaml 内容，包括手动输入和从指定代码库导入两种途径来覆盖。

![从 Git 仓库导入 Helm Chart](../_images/create_helm_chart_service_from_template_2.png)

### 使用模板批量新建服务
::: tip
Helm Chart 模板的 values.yaml 文件中不能使用自定义变量
:::

使用 [multi-service-demo](https://github.com/koderover/zadig/tree/main/examples/multi-service-demo) 案例来说明如何使用模板批量新建服务，必要目录说明如下：

``` shell
zadig/examples/multi-service-demo
├── base-chart # Helm Chart 模板
│   ├── Chart.yaml
│   ├── templates
│   │   ├── _helpers.tpl
│   │   ├── deployment.yaml
│   │   └── service.yaml
│   └── values.yaml # 不支持使用自定义变量
└── values # 分别对应 3 个服务的 values 文件
    ├── service1.yaml
    ├── service2.yaml
    └── service3.yaml
```

点击使用模板新建 -> 点击`批量创建` -> 选择 Helm Chart 模板 -> 选择要导入服务的 values 文件，导入即可。

![从 Helm Chart 模板导入服务](../_images/create_helm_chart_service_from_template_in_bulk_0.png)
![从 Helm Chart 模板导入服务](../_images/create_helm_chart_service_from_template_in_bulk_1.png)

导入后，效果如下图所示。一份 values 文件会被定义成一个服务，values 文件名即为服务名。服务批量创建完毕后，点击`更新环境`即可将服务快速应用于环境中。

![预览从 Helm Chart 模板导入服务后效果](../_images/show_services_created_by_template_in_bulk.png)

## 服务组件

![Helm Chart 服务组件自定义](../_images/helm_chart_service_component_define.png)

可参考[服务组件](/v1.15.0/quick-start/concepts/#服务组件)了解更多信息，此处相关字段说明如下：

- `服务组件`：同`镜像名`
- `镜像名`：按照`仓库地址/命名空间/镜像名:标签名`的规则来解读`当前镜像版本`，标签名前即为镜像名称
- `当前镜像版本`：系统按照一定的规则对 values.yaml 文件做解析获得镜像信息，解析规则可阅读[服务组件镜像解析规则](#服务组件镜像解析规则)
- `构建信息/操作`：可为服务组件配置构建操作，定义其构建过程，参考：[构建配置](/v1.15.0/project/build)

### 服务组件镜像解析规则

包括内置规则和自定义规则，导入 Helm Chart 配置文件后，系统会按照内置规则解析 vaues.yaml 文件中的镜像内容。当内置规则不满足需求时，可点击服务组件右侧的`更新匹配规则`来自定义镜像解析规则。

![Helm Chart 服务组件自定义](../_images/helm_chart_service_component_define_1.png)

**内置规则**
1. values.yaml 中有如下代码段结构，拼接 `image.repository:image.tag` 作为该组件的镜像版本，服务的部署版本和更新均围绕 `image.repository` 和 `image.tag`。该例中即为：`koderover.tencentcloudcr.com/koderover-demo/backend:latest`。

::: details
```yaml
# Helm Chart values.yaml Demo
key1: value1
key2: value2
key3:
  key4: value4
  key5:
    image:
      repository: "koderover.tencentcloudcr.com/koderover-demo/backend"
      tag: "latest"
  key6:
    ...
...
```
:::
2. values.yaml 中的 `image` 字段的值为镜像信息，服务的部署版本和更新均围绕 `image`。该例中即为 `koderover.tencentcloudcr.com/koderover-demo/backend:latest`。

::: details
```yaml
# Helm Chart values.yaml Demo
key1: value1
key2: value2
key3:
  key4: value4
  key5:
    image: "koderover.tencentcloudcr.com/koderover-demo/backend:latest"
  key6:
    ...
...
```
:::

**自定义规则**

1. 使用 key 的绝对路径来解析组件的镜像信息，下例中，自定义规则中填入 `deploy.image.repo`/`deploy.image.name`:`deploy.image.tag` 即可。
::: details
```yaml
key1: value1
key2: value2
...
deploy:
  image:
    repo: library
    name: ubuntu
    tag: 20.04
```
:::

2. 使用 key 的相对路径来解析服务组件的镜像信息，下例中，自定义规则中填入 `repo`/`name`:`tag` 即可。
::: details
```yaml
key1: value1
key2: value2
...
deploy:
  image:
    repo: library
    name: ubuntu
    tag: 20.04
```
:::

3. 支持使用一份解析规则来解析多个服务组件，下例中，自定义规则中填入 `repo`/`name`:`tag` 即可解析出 `service1` 和 `service2` 的镜像分别为 `library/service1:v1` 和 `library/service2:v2`。
::: details
```yaml
key1: value1
key2: value2
...
deploy:
  service1:
    repo: library
    name: service1
    tag: v1
  service2:
    repo: library
    name: service2
    tag: v2
```
:::

4. values.yaml 文件中可复用部分 key，下例中，自定义规则中填入 `public.repoInfo`/`name`:`tag` 即可解析出 `service1` 和 `service2` 的镜像分别为 `library/service1:v1` 和 `library/service2:v2`。
::: details
```yaml
key1: value1
key2: value2
...
public:
  repoInfo: library
deploy:
  service1:
    name: service1
    tag: v1
  service2:
    name: service2
    tag: v2
```
:::

5. 自定义规则中的 `仓库地址/命名空间` 和 `镜像名` 填写一项即可，`标签名` 非必填。下例中，在自定义规则的`仓库地址/命名空间`或`镜像名`中填入 `deploy.image.name` 即可

::: details
```yaml
deploy:
  image:
    name: library/ubuntu:12.04
```
:::

## 自定义 Helm Release 名称

系统默认会使用服务名作为部署的 Helm Release 名称，可在服务右侧的`Helm Release 名称配置`中按需修改。系统支持通过常量和以下变量组合来配置：

- `$Product$`：项目名称
- `$Service$`：服务名称
- `$Namespace$`：环境所在的命名空间
- `$EnvName$`：环境名称

当修改服务的 Helm Release 名称配置后，系统会自动重新部署环境中的服务，生成新的 Helm Release。

![自定义 Helm Release 名称](../_images/k8s_helm_chart_release_rename.png)

## 服务编排
> Zadig 系统支持对多个服务的部署顺序进行编排管理，同一启动顺序组的服务在部署时会并行执行，不同启动顺序组的服务会按照组顺序执行，适用于多个服务的启动顺序有先后依赖关系的场景。

点击`服务编排`图标，按需对服务启动顺序进行拖拽组合。

![K8s 服务编排](../_images/k8s_helm_service_orchestration.png)
![K8s 服务编排](../_images/k8s_helm_service_orchestration_1.png)

## 更新服务

### 更新从代码库同步的服务

从代码库同步服务的 Chart 配置后，会自动创建 Webhook。当对应代码库中有变更时，会自动同步服务的 Chart 配置到 Zadig 中。也可以点击服务右侧的同步按钮，点击`加载`主动同步更新。

![更新 Helm Chart 服务](../_images/helm_chart_service_update_2.png)

### 更新从 Chart 仓库同步的服务

点击服务右侧的同步按钮，按需修改 Chart 版本号，点击`更新`即可。

![更新 Helm Chart 服务](../_images/helm_chart_service_update_3.png)

### 更新使用模板新建的服务

当模板内容有变化时，点击服务右侧的同步按钮 -> 点击`导入`即可同步模板中最新内容，在导入之前也可以在`高级设置`中修改 Helm values 文件内容。

![更新 Helm Chart 服务](../_images/helm_chart_service_update_4.png)

如果该服务未开启自动同步，也可以直接编辑服务 values.yaml 的内容。

![更新 Helm Chart 服务](../_images/helm_chart_service_update_5.png)

## 删除服务

点击服务右侧的删除按钮即可将服务配置删除。若需要将服务从环境中也删除，点击`更新环境`并选择要更新的环境即可。

![删除服务](../_images/helm_chart_git_delete.png)

## 策略配置
在策略中设置部署服务的超时时间以及交付物命名规则。细节可阅读：[策略配置](/v1.15.0/project/service/k8s/#策略配置)。

![服务策略配置](../_images/helm_service_strategy_config.png)

## Helm Chart 样例

[koderover/zadig](https://github.com/koderover/zadig/tree/main) 库中提供了 Helm Chart 样例，点击[链接](https://github.com/koderover/zadig/tree/main/examples/multi-service-demo/full-charts/service1)查看详情。

